--- a/Pages/index - Grande Sábio_LandingPage.html
+++ b/Pages/index - Grande Sábio_LandingPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grande Sábio - Page 8</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index - Grande Sábio_LandingPage.css">
 </head>
 <body>
     <header>
@@ -30,8 +30,10 @@
                 <div class="about-text">
                     <p>O Grande Sábio é um espaço de apoio escolar e de formação, cujo compromisso é proporcionar, a alunos de todas as idades, uma aprendizagem da mais elevada excelência, permitindo-lhes alcançar mais e melhor para si e preparando-os para um mundo cada vez mais competitivo. Incutimos, nos nossos alunos, métodos de estudo e hábitos de trabalho, incentivando-os a serem responsáveis e cada vez mais autónomos.</p>
                 </div>
-
-
+                <div class="about-logo">
+                    <img src="C:\Users\junior\Documents\GitHub\GrandeSabio_CAF\.resourch\Imagens\Logo\MainPage_Quem Somos_Logotipo.png" alt="Grande Sábio">
+                </div>
+            </div>
 
             <div class="stats">
                 <div class="stat-item">
@@ -45,50 +47,6 @@
                 <div class="stat-item">
                     <span class="stat-number">150</span>
                     <span class="stat-label">Profissionais</span>
-                </div>
-            </div>
-        </section>
-
-
-        <section id="onde-estamos" class="section">
-            <h2 class="section-title">Novidades</h2>
-            <div class="locations-grid">
-                <div class="location-card">
-                    <h3>Férias de Janeiro</h3>
-                    <p>14 a 18 de Janeiro</p>
-                    <button class="plus-btn" onclick="navigateTo('Pages/CAF_Santa Maria da Feira.html')">+</button>
-                </div>
-                <div class="location-card">
-                    <h3>Férias de Carnaval</h3>
-                    <p>14 a 18 de Janeiro</p>
-                    <button class="plus-btn" onclick="navigateTo('Pages/CAF_Ovar.html')">+</button>
-                </div>
-                <div class="location-card">
-                    <h3>Férias de Verão</h3>
-                    <p>14 a 18 de Janeiro</p>
-                    <button class="plus-btn" onclick="navigateTo('Pages/CAF_Esmoriz.html')">+</button>
-                </div>
-            </div>
-        </section>
-
-        <section id="servicos" class="section">
-            <h2 class="section-title">Os Nossos Serviços</h2>
-            <div class="services-grid">
-                <div class="service-card">
-                    <h3>CAF_Município de Santa Maria da Feira</h3>
-                    <button class="plus-btn" onclick="navigateTo('Pages/index - CAF_Santa Maria da Feira.html')">+</button>
-                </div>
-                <div class="service-card">
-                    <h3>CAF_Município de Ovar</h3>
-                    <button class="plus-btn" onclick="navigateTo('Pages\index - CAF_Santa Maria da Feira.html')">+</button>
-                </div>
-                <div class="service-card">
-                    <h3>CAF_Município de Esmoriz</h3>
-                    <button class="plus-btn" onclick="navigateTo('Pages/CAF_Esmoriz.html')">+</button>
-                </div>
-                <div class="service-card wide">
-                    <h3>Gosto Pelo Saber</h3>
-                    <button class="plus-btn" onclick="navigateTo('Pages/Gosto Pelo Saber.html')">+</button>
                 </div>
             </div>
         </section>
@@ -111,9 +69,7 @@
         function navigateTo(filePath) {
             window.location.href = filePath;
         }
-        function navigateTo(url) {
-    window.location.href = url;
-}  
     </script>
 </body>
 </html>
+
